<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="displayOrientations">
        <item>auto</item>
        <item>portrait</item>
        <item>landscape</item>
    </string-array>
    <string-array name="displayOrientations_Entries">
        <item>Автоматический</item>
        <item>Портретный</item>
        <item>Ландшафтный</item>
    </string-array>

    <string name="app_name">Экспресс-Ревизия</string>
    <string name="settings_title">Настройки</string>
    <string name="demoMode">Демо-режим</string>
    <string name="demoMode_Summary">Обучающий режим работы, не требующий подключения к источникам данных.</string>
    <string name="setDuplicatesAsVisited">Отмечать дубликаты как посещенные</string>
    <string name="setDuplicatesAsVisited_Summary">Все повторяющиеся в списке номенклатуры элементы будут отмечены как посещенные, если посетить хотя бы один из них.</string>
    <string name="btnLoadDocument">Загрузить список ревизий</string>
    <string name="btnSetVisitedOff">Снять посещение</string>
    <string name="btnEditDocument">Редактировать ревизию</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="upload">Отправить</string>
    <string name="demoModeOnConfirmation">Включить демо-режим?</string>
    <string name="demoModeOnWarning">Внимание!\nВсе данные текущей ревизии будут уничтожены!\nПродолжить?</string>
    <string name="demoModeOffConfirmation">Отключить демо-режим?</string>
    <string name="demoModeOffWarning">"Внимание!\nВсе демо-данные будут уничтожены!\nПродолжить?"</string>
    <string name="resreshList">"Обновить список"</string>
    <string name="loadDocuments">"Обновить список ревизий"</string>
    <string name="loadDocument">Загрузить ревизию</string>
    <string name="addDocument">Добавить ревизию</string>
    <string name="loading">Загрузка</string>
    <string name="loadingDocuments">Загрузка списка ревизий</string>
    <string name="loadingItems">Загрузка номенклатуры</string>
    <string name="loadingCancelled">Загрузка отменена</string>
    <string name="loadingUnsuccessful">Загрузка не удалась!</string>
    <string name="pleaseWait">Пожалуйста, подождите...</string>
    <string name="refreshDocListOnOpening">Интервал обновления списка ревизий</string>
    <string name="refreshDocListOnOpening_Summary">Установка времени, по истечении которого полученный список ревизий считается устаревшим и требуется получить новый.</string>
    <string name="itemsListLoadedNumberOfUsingThreads">Потоков загрузки</string>
    <string name="itemsListLoadedNumberOfUsingThreads_Summary">Количество потоков, используемых для загрузки номенклатуры.</string>
    <string name="dataExchangePrefs">Настройки обмена данных</string>
    <string name="userPrefs">Пользовательские настройки</string>
    <string name="displayOrientation">Ориентация экрана</string>
    <string name="connectPrefs">Настройки подключения</string>
    <string name="rowsInDataParcel">Строк в пакете данных</string>
    <string name="clearTables">Очистить данные</string>
    <string name="tablesCleared">Данные очищены!</string>
    <string name="docsTableNotCleared">Список ревизий не очищен!</string>
    <string name="itemsTableNotCleared">Содержимое ревизии не очищено!</string>
    <string name="dataCleaning">Очистка данных</string>
    <string name="dataCleaningQuestion">Удалить данные ревизии?</string>
    <string name="documentIsntLoaded">Ревизия не загружена!</string>
    <string name="rows">Cтрок:</string>
    <string name="rowsDeleted">Cтрок удалено:</string>
    <string name="documentLoaded">Ревизия загружена</string>
    <string name="docStatusRetrieving">Установка статуса документа</string>
    <string name="cantSetDocStatus">Статус документа установить не удалось!</string>
    <string name="rowsLoaded">Строк загружено:</string>
    <string name="percent">%</string>
    <string name="enterFilterString">Строка для поиска...</string>
    <string name="networkNotAvailable">Отсутствует подключение к сети!</string>
    <string name="currency">руб.</string>
    <string name="clearValue">Очистить</string>
    <string name="setQuantity">Укажите количество</string>
    <string name="docsConnectionParametersNotSet">Нет параметров для получения списка документов!</string>
    <string name="docsConnectionStringNotSet">Не указана строка соединения для получения списка документов!</string>
    <string name="docsStatusSettingsNotSet">Не указаны параметры для установки статуса документа!</string>
    <string name="itemsConnectionParametersNotSet">Нет параметров для получения содержимого документов!</string>
    <string name="itemsConnectionStringNotSet">Не указана строка соединения для получения содержимого документов!</string>
    <string name="docSuccessfullyUploaded">Документ успешно передан на сервер.</string>
    <string name="docIsNotUploaded">Документ передать на сервер не удалось!</string>
    <string name="serverResponse">Ответ сервера:</string>
    <string name="uploadDataToServer">Отправить данные на сервер?</string>
    <string name="uploadDataToServerMessage">В случае успешной отправки данные с этого устройства будут удалены!</string>

    <!-- Строки подключения и их заголовки -->
    <string name="connectionStringDocs">Получение списка документов</string>
    <string name="docsConnectionString">http://express.nsk.ru:9999/erdocs.php</string>
    <string name="connectionStringItems">Получение содержимого документов</string>
    <string name="itemsConnectionString">http://express.nsk.ru:9999/eritems.php</string>
    <string name="connectionStringItemsPost">Отправка содержимого документов</string>
    <string name="itemsPostConnectionString">http://express.nsk.ru:9999/eritems_post.php</string>

    <!-- Для отображения количества -->
    <string name="quantityFormatPattern">###,###.##</string>
    <string name="quantityDecimalSeparator">.</string>
    <string name="quantityGroupingSeparator">\'</string>

    <!-- Признак, выставляемый документу на сервере после успешной загрузки на устройство -->
    <string name="docStatusAfterSuccessfulLoading">2</string>

    <!-- Признак, выставляемый документу на сервере после успешной загрузки на сервер -->
    <string name="docStatusAfterSuccessfulUploading">3</string>

</resources>