<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:orderingFromXml="true">

    <EditTextPreference
        android:inputType="number"
        android:key="docListOnOpeningTimeDelay"
        android:summary="@string/refreshDocListOnOpening_Summary"
        android:title="@string/refreshDocListOnOpening" />

    <PreferenceScreen
        android:key="connectPrefs"
        android:title="@string/connectPrefs" >
        <EditTextPreference
            android:key="connectionStringDocs"
            android:title="@string/connectionStringDocs" />
        <EditTextPreference
            android:key="connectionStringItems"
            android:title="@string/connectionStringItems" />
        <EditTextPreference
            android:inputType="number"
            android:key="rowsInDataBundle"
            android:title="@string/rowsInDataBundle" />
    </PreferenceScreen>

    <PreferenceCategory
        android:key="displayPrefs"
        android:title="@string/displayPrefs" >
        <ListPreference
            android:entries="@array/displayOrientations_Entries"
            android:entryValues="@array/displayOrientations"
            android:key="displayOrientation"
            android:title="@string/displayOrientation" >
        </ListPreference>
    </PreferenceCategory>

    <CheckBoxPreference
        android:key="demoModePrefs"
        android:title="@string/demoMode" />

</PreferenceScreen>